--- a/srcs/.env
+++ b/srcs/.env
@@ -1,15 +1,15 @@
-MYSQL_ROOT_PASSWORD=root123
-MYSQL_DATABASE=inception_db
-MYSQL_USER=ahmed
-MYSQL_PASSWORD=ahmed123
+MYSQL_ROOT_PASSWORD=......
+MYSQL_DATABASE=......
+MYSQL_USER=.....
+MYSQL_PASSWORD=......
 
-WP_URL=ealshorm.42.fr
-WP_TITLE=Inception_Blog
-WP_ADMIN_USER=esraa
-WP_ADMIN_PASSWORD=ES123@456
-WP_ADMIN_EMAIL=ealshorm@42.fr
+WP_URL=login.42.fr
+WP_TITLE=......
+WP_ADMIN_USER=.....
+WP_ADMIN_PASSWORD=.....
+WP_ADMIN_EMAIL=......
 
 
-WP_USER=esra2
-WP_USER_PASSWORD=ES123@456
-WP_USER_EMAIL=author@42.fr
+WP_USER=......
+WP_USER_PASSWORD=.....
+WP_USER_EMAIL=.........
